crates/kotlin-syntax/tests/snapshots/event_snapshots__event_empty_file.snap
---
source: crates/kotlin-syntax/tests/event_snapshots.rs
expression: out
---
SOURCE:

TOKENS:
EOF ""

LEX_ERRORS:
<none>

EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(IMPORT_LIST, forward_parent=None)
FinishNode
FinishNode

PARSE_ERRORS:
<none>
