crates/kotlin-syntax/tests/snapshots/event_snapshots__event_file_annotation.snap
---
source: crates/kotlin-syntax/tests/event_snapshots.rs
expression: out
---
SOURCE:
@file:JvmName("FooKt")

TOKENS:
AT "@"
IDENTIFIER "file"
COLON ":"
IDENTIFIER "JvmName"
L_PAREN "("
OPEN_QUOTE "\""
STRING_CONTENT "FooKt"
CLOSE_QUOTE "\""
R_PAREN ")"
NEWLINE "\n"
EOF ""

LEX_ERRORS:
<none>

EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(FILE_ANNOTATION, forward_parent=None)
AddToken
StartNode(ANNOTATION_USE_SITE_TARGET, forward_parent=None)
AddToken
AddToken
FinishNode
StartNode(USER_TYPE, forward_parent=None)
AddToken
FinishNode
StartNode(VALUE_ARGUMENTS, forward_parent=None)
AddToken
StartNode(VALUE_ARGUMENT, forward_parent=None)
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(STRING_LITERAL, forward_parent=None)
AddToken
AddToken
AddToken
FinishNode
FinishNode
AddToken
FinishNode
AddToken
FinishNode
StartNode(IMPORT_LIST, forward_parent=None)
FinishNode
FinishNode

PARSE_ERRORS:
<none>
