crates/kotlin-syntax/tests/snapshots/event_snapshots__event_package_and_imports.snap
---
source: crates/kotlin-syntax/tests/event_snapshots.rs
expression: out
---
SOURCE:
package a.b
import a.b.*
import a.b.C as D

TOKENS:
PACKAGE_KW "package"
WHITESPACE " "
IDENTIFIER "a"
DOT "."
IDENTIFIER "b"
NEWLINE "\n"
IDENTIFIER "import"
WHITESPACE " "
IDENTIFIER "a"
DOT "."
IDENTIFIER "b"
DOT "."
STAR "*"
NEWLINE "\n"
IDENTIFIER "import"
WHITESPACE " "
IDENTIFIER "a"
DOT "."
IDENTIFIER "b"
DOT "."
IDENTIFIER "C"
WHITESPACE " "
AS_KW "as"
WHITESPACE " "
IDENTIFIER "D"
NEWLINE "\n"
EOF ""

LEX_ERRORS:
<none>

EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(PACKAGE_HEADER, forward_parent=None)
AddToken
StartNode(QUALIFIED_NAME, forward_parent=None)
AddToken
AddToken
AddToken
FinishNode
AddToken
FinishNode
StartNode(IMPORT_LIST, forward_parent=None)
StartNode(IMPORT_HEADER, forward_parent=None)
AddToken
StartNode(IMPORT_PATH, forward_parent=None)
StartNode(QUALIFIED_NAME, forward_parent=None)
AddToken
AddToken
AddToken
FinishNode
AddToken
AddToken
FinishNode
AddToken
FinishNode
StartNode(IMPORT_HEADER, forward_parent=None)
AddToken
StartNode(IMPORT_PATH, forward_parent=None)
StartNode(QUALIFIED_NAME, forward_parent=None)
AddToken
AddToken
AddToken
AddToken
AddToken
FinishNode
StartNode(IMPORT_ALIAS, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
AddToken
FinishNode
FinishNode
FinishNode

PARSE_ERRORS:
<none>
